[package]
name = "gramatron_upgrade"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard_0_7 = { package = "postcard", version = "0.7" }
postcard_1_0 = { package = "postcard", version = "1.0", features = ["alloc"] }
serde_json = { version = "1.0.114" }
libafl = { path = "../../libafl/" }
